--- a/views/public/index.pug
+++ b/views/public/index.pug
@@ -1,10 +1,10 @@
 extends ../layout
 block dependencies
-    - var css = ["https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.0.0/css/bootstrap-slider.min.css", "https://cdn.jsdelivr.net/jquery.minicolors/2.1.2/jquery.minicolors.css", "/css/place.css"];
+    - var css = ["https://cdn.bootcdn.net/ajax/libs/bootstrap-slider/9.9.1/css/bootstrap-slider.min.css", "https://cdn.bootcdn.net/ajax/libs/jquery-minicolors/2.3.6/jquery.minicolors.css", "/css/place.css"];
     - var pinnable = true;
     - var needsLegit = true;
     - var needsHelp = true;
-    - var pageDesc = "Work together to create something amazing. Join thousands of other users and see what happens when you share one huge canvas.";
+    - var pageDesc = "网络用户一起合作，创造一些惊人的东西。加入成千上万的其他用户，看看当你们共享一个巨大的画布时会发生什么。";
 block content
     +getViewExtensions("main")
     include views/place
@@ -15,14 +15,14 @@ block content
             .dialog#changelog-dialog
                 .close &times;
                 .pages
-                    .active(tab-name="What's new")
+                    .active(tab-name="最新消息")
                         .heading.no-margin
                             span.site #{config.siteName}
-                            h1 What's New
+                            h1 最新消息
                         #changelog-content
                 .dialog-footer.align-end.
-                    #[small: a#changelog-opt-out(href="javascript:void(0)", data-dialog-dismiss=true) Don't show again]&nbsp;&nbsp;&nbsp;#[a.btn.btn-popping(data-dialog-dismiss=true) Close]
+                    #[small: a#changelog-opt-out(href="javascript:void(0)", data-dialog-dismiss=true) 不再出现]&nbsp;&nbsp;&nbsp;#[a.btn.btn-popping(data-dialog-dismiss=true) 关闭]
     unless user
         include views/auth-dialog
     include views/help-dialog
-    - var js = ["https://cdn.jsdelivr.net/interact.js/1.2.6/interact.min.js", "https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.0.0/bootstrap-slider.min.js", "https://cdn.jsdelivr.net/jquery.minicolors/2.1.2/jquery.minicolors.min.js", "https://cdn.jsdelivr.net/clipboard.js/1.6.0/clipboard.min.js", "https://unpkg.com/eventemitter3@latest/umd/eventemitter3.min.js", "/js/build/socket.js", "/js/build/popout.js", "/js/build/place.js", "https://cdn.jsdelivr.net/gh/rmm5t/jquery-timeago@180864a9c544a49e43719b457250af216d5e4c3a/jquery.timeago.js"];
+    - var js = ["/js/interact.min.js", "https://cdn.bootcdn.net/ajax/libs/bootstrap-slider/9.9.1/bootstrap-slider.min.js", "https://cdn.bootcdn.net/ajax/libs/jquery-minicolors/2.3.6/jquery.minicolors.min.js", "https://cdn.bootcdn.net/ajax/libs/clipboard.js/1.7.1/clipboard.min.js", "/js/eventemitter3.js", "/js/build/socket.js", "/js/build/popout.js", "/js/build/place.js", "https://cdn.bootcdn.net/ajax/libs/jquery-timeago/1.6.7/jquery.timeago.js"];
