--- a/views/public/index.pug
+++ b/views/public/index.pug
@@ -25,4 +25,4 @@ block content
     unless user
         include views/auth-dialog
     include views/help-dialog
-    - var js = ["/js/interact.min.js", "https://cdn.bootcdn.net/ajax/libs/bootstrap-slider/9.9.1/bootstrap-slider.min.js", "https://cdn.bootcdn.net/ajax/libs/jquery-minicolors/2.3.6/jquery.minicolors.min.js", "https://cdn.bootcdn.net/ajax/libs/clipboard.js/1.7.1/clipboard.min.js", "/js/eventemitter3.js", "/js/build/socket.js", "/js/build/popout.js", "/js/build/place.js", "https://cdn.bootcdn.net/ajax/libs/jquery-timeago/1.6.7/jquery.timeago.js"];
+    - var js = ["/js/build/socket.io.min.js","/js/interact.min.js", "https://cdn.bootcdn.net/ajax/libs/bootstrap-slider/9.9.1/bootstrap-slider.min.js", "https://cdn.bootcdn.net/ajax/libs/jquery-minicolors/2.3.6/jquery.minicolors.min.js", "https://cdn.bootcdn.net/ajax/libs/clipboard.js/1.7.1/clipboard.min.js", "/js/eventemitter3.js", "/js/build/socket.js", "/js/build/popout.js", "/js/build/place.js", "https://cdn.bootcdn.net/ajax/libs/jquery-timeago/1.6.7/jquery.timeago.js"];
