--- a/views/layout.pug
+++ b/views/layout.pug
@@ -36,7 +36,7 @@ mixin getViewExtensions(name)
   .
     !{moduleManager.gatherViewExtensions(name, req, res)}
 doctype html
-html(lang="en")
+html(lang="zh")
   head
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
@@ -68,9 +68,9 @@ html(lang="en")
     meta(name="csrf-token" content=_csrf)
     meta(name="place-site-name", content=config.siteName)
     // Hard CSS
-    link(href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700", rel="stylesheet")
+    link(href="https://fonts.font.im/css?family=Open+Sans:300,400,600,700", rel="stylesheet")
     link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css", rel="stylesheet")
-    link(href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", rel="stylesheet")
+    link(href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css", rel="stylesheet")
     // Provided CSS
     - css.unshift("/css/global.css")
     each item in [...new Set(css)]
@@ -88,11 +88,11 @@ html(lang="en")
         // Brand and toggle get grouped for better mobile display
         .navbar-header
           button.navbar-toggle.collapsed(type="button", data-toggle="collapse", data-target="#navbar-collapse", aria-expanded="false")
-            span.sr-only Toggle navigation
+            span.sr-only 切换导航
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand(href="https://www.dynastic.co", style="margin-right: -5px")
+          a.navbar-brand(href="https://www.minebbs.com", style="margin-right: -5px")
             img(src="https://assets.dynastic.co/brand/img/icon-46.png", height="20")
           a.navbar-brand(href="/")
             | #{config.siteName}
@@ -101,22 +101,19 @@ html(lang="en")
         .collapse.navbar-collapse#navbar-collapse
           ul.nav.navbar-nav
             +getViewExtensions("nav_left")
-            +renderNavItem("Home", "/", "home")
+            +renderNavItem("主页", "/", "home")
             +getViewExtensions("nav_inside")
             li.dropdown
               a.dropdown-toggle(data-toggle="dropdown", href="#", role="button", aria-haspopup="true", aria-expanded="false")
                 i.fa.fa-users.fa-fw
                 .
-                  Community #[span.caret]
+                  社区 #[span.caret]
               ul.dropdown-menu
-                +renderNavItem("Official Subreddit", "https://www.reddit.com/r/place20", "reddit-alien")
-                +renderNavItem("Chat on Discord", "https://discord.gg/CgC8FTg", "comments")
-                +renderNavItem("Timelapses", "https://timelapse.canvas.place", "clock-o")
-                +renderNavItem("Merch", "https://merch.canvas.place", "shopping-cart")
-                +renderNavItem("Source Code", "https://www.github.com/dynastic/place", "github")
-            //- +renderNavItem("Donate", "https://www.paypal.me/dynastic", "money")
+                +renderNavItem("官方社区", "https://www.minebbs.com", "cube")
+                +renderNavItem("QQ交流群", "https://jq.qq.com/?_wv=1027&k=5oijjf3", "comments")
+                // +renderNavItem("延时记录", "https://timelapse.canvas.place", "clock-o")
             if user && userMod
-              +renderNavItem(userAdmin ? "Admin" : "Moderator", "/admin", "gavel")
+              +renderNavItem(userAdmin ? "管理员" : "版主", "/admin", "gavel")
             +getViewExtensions("nav_right")
           ul.nav.navbar-nav.navbar-right
             +getViewExtensions("nav_user_left")
@@ -127,26 +124,26 @@ html(lang="en")
                   .
                     #[span(name="user-dropdown") #{user.usernameSet ? user.name : ""}] #[span.caret]
                 ul.dropdown-menu
-                  +renderNavItem("Your Profile", "/account", "user-circle-o")
-                  +renderNavItem("What's New", "javascript:void(0)", "list")
-                  +renderNavItem("Rules", "/guidelines", "handshake-o")
+                  +renderNavItem("你的资料", "/account", "user-circle-o")
+                  +renderNavItem("最新消息", "javascript:void(0)", "list")
+                  +renderNavItem("社区规则", "/guidelines", "handshake-o")
                   li.divider(role="separator")
-                  +renderNavItem("Sign Out", `/signout?redirectURL=${redirectURLPart}`, "sign-out")
+                  +renderNavItem("登出", `/signout?redirectURL=${redirectURLPart}`, "sign-out")
             else
               li#nav-auth-link
-                a.btn.btn-sm.btn-nav-auth-link(href=(path == "/" ? "javascript:void(0)" : `/#signup&redirectURL=${redirectURLPart}`), data-place-trigger="openAuthDialog") Get Started
+                a.btn.btn-sm.btn-nav-auth-link(href=(path == "/" ? "javascript:void(0)" : `/#signup&redirectURL=${redirectURLPart}`), data-place-trigger="openAuthDialog") 开始放置！
             if needsHelp
-              +renderNavItem("Help", "javascript:void(0)", "question-circle", false)
+              +renderNavItem("帮助", "javascript:void(0)", "question-circle", false)
             +getViewExtensions("nav_user_right")
     main
       // Content-insertion point
       block content
     // EU Cookie Banner
     #cookies-eu-banner(style="display: none;")
-      h4 Cookies on #{config.siteName}
-      p By continuing your use of this service, you accept the use of cookies by Google Analytics to record generalized visit statistics.
+      h4 #{config.siteName} Cookies 信息
+      p 您继续使用本服务，即表示您接受谷歌分析使用cookie记录一般性访问统计数据。
         |  #[a#cookies-eu-more(href="/privacy", style=`display: ${hasPP ? "inline" : "none"}`) Learn more &raquo;]
-      | #[btn#cookies-eu-accept.btn.btn-success Accept] #[btn#cookies-eu-reject.btn.btn-danger Reject]
+      | #[btn#cookies-eu-accept.btn.btn-success 接受] #[btn#cookies-eu-reject.btn.btn-danger 拒绝]
 - if(typeof isAdmin === "undefined") isAdmin = false;
 - if(typeof needsLegit === "undefined") needsLegit = false;
 - if(typeof user === "undefined") user = null;
@@ -159,26 +156,26 @@ html(lang="en")
     footer.footer
         .container.footer-contents
             div
-                p.text-muted &copy; Dynastic Development
+                p.text-muted &copy; 2018-2022 MineBBS我的世界中文论坛
             .right
                 p: ul.footer-links
                     if hasTOS
-                        li: a(href="/tos") Terms of Service
+                        li: a(href="/tos") 服务条款
                     if hasCommunityGuidelines
-                        li: a(href="/guidelines") Rules
+                        li: a(href="/guidelines") 规则
                     if hasPP
-                        li: a(href="/privacy") Privacy Policy
+                        li: a(href="/privacy") 隐私政策
         +getViewExtensions("footer")
       
     // Scripts
-    script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js")
+    script(src="https://cdn.bootcdn.net/ajax/libs/jquery/1.12.4/jquery.min.js")
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js", integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa", crossorigin="anonymous")
     script(src="https://cdn.polyfill.io/v2/polyfill.min.js")
     if typeof config.publicRaven !== "undefined" && config.publicRaven
-      script(src="https://cdn.ravenjs.com/3.25.2/raven.min.js", crossorigin="anonymous")
+      script(src="https://cdn.bootcdn.net/ajax/libs/raven.js/raven-js@3.27.0/raven.min.js", crossorigin="anonymous")
       script.
           Raven.config('#{config.publicRaven}').install();
-    - js.unshift("https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js", "/js/cookies-eu-banner.min.js", "/js/build/site.js");
+    - js.unshift("/js/js.cookie.min.js", "/js/cookies-eu-banner.min.js", "/js/build/site.js");
     each item in [...new Set(js)]
         script(src=item + "?v=" + resourceVersion)
     each item in [...new Set(jsSnippets.concat(jsModSnippets))]
