汉化错误文件

--- a/views/errors/404.pug
+++ b/views/errors/404.pug
@@ -1,8 +1,8 @@
 extends ../layout
 block dependencies
-    - var pageTitle = "Page not found"
+    - var pageTitle = "无法找到该页！"
 block content
     .container.norctn
-        h1 Page not found!
-        p.text-muted.lead We're sorry, but we could not find that page on our server. It may have been moved, deleted, or never existed in the first place. If you believe this is in error, please #[a(href="mailto:hello@dynastic.co") contact us].
-        a(href="/") &laquo; Go to home page
+        h1 无法找到该页！
+        p.text-muted.lead 我们很抱歉，但我们无法在我们的服务器上找到这一页。它可能已经被移动、删除，或者从一开始就不存在。如果您认为这是错误的，请 #[a(href="mailto:1209897320@qq.com") 联系我们]。
+        a(href="/") &laquo; 返回主页
