--- a/views/admin_layout.pug
+++ b/views/admin_layout.pug
@@ -13,20 +13,20 @@ block dependencies
     - if (typeof user === "undefined") user = null;
     - var userAdmin = user ? user.admin : false;
     - var pageTitle = !!pageTitle ? pageTitle + " &middot; Admin" : "Admin";
-    - var css = ["/css/dashboard.css", "https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/css/bootstrap-select.min.css"].concat(typeof css === "undefined" ? [] : css);
-    - var js = ["https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/js/bootstrap-select.min.js"].concat(typeof js === "undefined" ? [] : js);
+    - var css = ["/css/dashboard.css", "https://cdn.bootcdn.net/ajax/libs/bootstrap-select/1.13.18/css/bootstrap-select.min.css"].concat(typeof css === "undefined" ? [] : css);
+    - var js = ["https://cdn.bootcdn.net/ajax/libs/bootstrap-select/1.13.18/js/bootstrap-select.min.js"].concat(typeof js === "undefined" ? [] : js);
     - var isAdmin = true;
 block content
     .container-fluid
         .row
             .col-sm-3.col-md-2.sidebar
                 ul.nav.nav-sidebar
-                    +renderAdminNavItem("Dashboard", "/admin/")
-                    +renderAdminNavItem("Recent Actions", "/admin/actions")
-                    +renderAdminNavItem("Moderator Log", "/admin/log")
+                    +renderAdminNavItem("仪表盘", "/admin/")
+                    +renderAdminNavItem("当前动作", "/admin/actions")
+                    +renderAdminNavItem("版主日志", "/admin/log")
                 ul.nav.nav-sidebar
-                    +renderAdminNavItem("Users", "/admin/users")
-                    +renderAdminNavItem("Reports", "/admin/reports")
-                    +renderAdminNavItem("Pixels", "/admin/pixels")
+                    +renderAdminNavItem("用户", "/admin/users")
+                    +renderAdminNavItem("举报", "/admin/reports")
+                    +renderAdminNavItem("像素", "/admin/pixels")
             .col-sm-9.col-sm-offset-3.col-md-10.col-md-offset-2.main
                 block adminContent
