--- a/views/admin/users.pug
+++ b/views/admin/users.pug
@@ -3,15 +3,15 @@ block adminDependencies
     - var css = ["https://cdn.datatables.net/1.10.13/css/dataTables.bootstrap.min.css"];
     - var js = ["https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js", "https://cdn.datatables.net/1.10.13/js/dataTables.bootstrap.min.js", "/js/build/admin_users.js"];
 block adminContent
-    h1.page-header Users
+    h1.page-header 用户
     table.table#users
         thead
             tr
-                th Username
-                th Account Created
-                th Last Place
-                th Total Places
-                th Actions
+                th 用户名
+                th 已创建账户
+                th 最后绘制
+                th 总绘制
+                th 动作
         tbody
             th ------
             th ---- -- --, -- -- -- --
