--- a/views/admin/coming_soon.pug
+++ b/views/admin/coming_soon.pug
@@ -1,4 +1,4 @@
 extends ../admin_layout
 block adminContent
-    h1.page-header Coming Soon
-    p.lead.text-muted Please wait while we work on this feature.
+    h1.page-header 即将到来
+    p.lead.text-muted 请稍候，我们正在研究这一特性。
