--- a/views/admin/similar_users.pug
+++ b/views/admin/similar_users.pug
@@ -1,14 +1,14 @@
 extends ../admin_layout
 block adminDependencies
-    - var js = ["https://cdn.jsdelivr.net/gh/rmm5t/jquery-timeago@180864a9c544a49e43719b457250af216d5e4c3a/jquery.timeago.js", "/js/build/admin_similar_users.js"];
-    - var jsSnippets = [`var defaultBanReason = "Alternate account of ${target.name}";`, `var userID = "${target.id}";`];
+    - var js = ["https://cdn.bootcdn.net/ajax/libs/jquery-timeago/1.6.7/jquery.timeago.js", "/js/build/admin_similar_users.js"];
+    - var jsSnippets = [`var defaultBanReason = "${target.name} 的小号";`, `var userID = "${target.id}";`];
 block adminContent
     .page-header
-        h1 Similar Accounts
-        p.lead.text-muted Accounts identified to be similar to "#{target.name}".
-        a(href="/admin/users") &laquo; Back to users
+        h1 相似账户
+        p.lead.text-muted 账号身份类似于 "#{target.name}".
+        a(href="/admin/users") &laquo; 返回用户
     #data
-        #loading #[i.fa.fa-circle-o-notch.fa-spin] Loading similar accounts…
+        #loading #[i.fa.fa-circle-o-notch.fa-spin] 相似账户加载中…
         #target-ctn
         br
         #similar-ctn
