--- a/views/admin/similar_users_error.pug
+++ b/views/admin/similar_users_error.pug
@@ -1,6 +1,6 @@
 extends ../admin_layout
 block adminContent
     .page-header
-        h1 Similar Accounts
+        h1 相似账户
         a(href="/admin/users") &laquo; Back to users
     .alert.alert-danger #[strong Uh oh!] #{errorMsg}
