--- a/views/public/deactivated.pug
+++ b/views/public/deactivated.pug
@@ -1,8 +1,8 @@
 extends ../layout
 block dependencies
-    - var pageTitle = "Account Deactivated"
+    - var pageTitle = "账户停用"
 block content
     .container.norctn
-        h1 Account Deactivated
-        p.text-muted Sorry to see you go! Your account has been successfully deactivated. Thank you for using #{config.siteName}! To reactivate your account, just log back in.
-        a(href="/") &laquo; Go to home page
+        h1 账户停用
+        p.text-muted 对你的离开感到遗憾！您的帐户已成功停用。感谢您使用 #{config.siteName}！ 要重新激活您的帐户，只需重新登录。
+        a(href="/") &laquo; 返回主页
