--- a/views/public/deleted.pug
+++ b/views/public/deleted.pug
@@ -1,8 +1,8 @@
 extends ../layout
 block dependencies
-    - var pageTitle = "Account Deleted"
+    - var pageTitle = "账户删除"
 block content
     .container.norctn
-        h1 Account Deleted
-        p.text-muted Sorry to see you go! Your account is pending deletion and be removed in 7 days; to get your account back, just log back in before then. Thank you for using #{config.siteName}, we'll miss you! 
-        a(href="/") &laquo; Go to home page
+        h1 账户删除
+        p.text-muted 很遗憾你要离开我们了！您的帐户正在等待删除，并将在7天内删除；要取回你的帐户，只需在7天内登录。感谢你使用 #{config.siteName}，我们会想你的！ 
+        a(href="/") &laquo; 返回主页
