--- a/views/public/require-tos-accept.pug
+++ b/views/public/require-tos-accept.pug
@@ -1,13 +1,13 @@
 extends ../layout
 block content
     .container.norctn
-        h1 Hey, #{user.name}!
-        p.lead.text-muted We need something from you before you can continue to #{config.siteName}.
-        p Our #[a(href="/tos") Terms of Service] have changed since the last time you used #{config.siteName}, so before we can let you use #{config.siteName} again, you'll need to accept the new Terms of Service. Please read the provided Terms of Service and indicate that you either agree or disagree at the bottom of the page.
+        h1 嗨喽，#{user.name}!
+        p.lead.text-muted 在你继续前往 #{config.siteName} 之前，我们需要你的同意.
+        p Our #[a(href="/tos") 服务条款] 自你上次使用 #{config.siteName} 后发生了变更，所以在我们允许您继续使用 #{config.siteName} 前，你需要接受新的服务条款。请阅读所提供的服务条款，并在本页底部注明您同意或不同意。
         hr
         div !{md}
         hr
-        p.text-muted If you agree with the new Terms of Service, click #[strong Agree] to continue to #{config.siteName}. If you do not agree to the new Terms of Service, you may not use #{config.siteName}, click #[strong Disagree] to be signed out.
+        p.text-muted If you agree with the new Terms of Service, click #[strong 同意] to continue to #{config.siteName}. If you do not agree to the new Terms of Service, you may not use #{config.siteName}, click #[strong Disagree] to be signed out.
         form(method="POST")
             input(type='hidden', name='_csrf', value=_csrf)
             input(type="hidden", name="tosAccepted", value="true")
