汉化文件，更新js及cdn

--- a/views/public/views/beta-dialog.pug
+++ b/views/public/views/beta-dialog.pug
@@ -6,10 +6,10 @@
             .active(tab-name="enroll")
                 .heading.no-margin
                     span.site #{config.siteName}
-                    h1 Join the Beta Program
-                    p.subhead Live on the bleeding edge, and help us test features before they go live.
+                    h1 加入测试计划
+                    p.subhead 在最前沿进行测试，并帮助我们在功能上线前进行测试。
                 .content
-                    p Want to help us test features and get early access to them? Join the beta program and receive new features before everyone else does. We'll give you access to our latest feature set, and all you have to do is provide feedback so that we can make sure these features are great before releasing them to everyone.
-                    button.btn.btn-lg.btn-success#signup Sign up
+                    p 想要帮助我们测试功能并尽早使用它们吗?加入测试程序，在其他人之前获得新功能。我们会让你使用我们最新的功能集，你所要做的就是提供反馈，这样我们就可以在发布给大家之前确保这些功能是优秀的。
+                    button.btn.btn-lg.btn-success#signup 注册
                     br
-        .dialog-footer.align-end: a.btn.btn-popping(data-dialog-dismiss=true) Close
+        .dialog-footer.align-end: a.btn.btn-popping(data-dialog-dismiss=true) 关闭
