--- a/views/public/views/auth-dialog.pug
+++ b/views/public/views/auth-dialog.pug
@@ -6,21 +6,21 @@
             .active(tab-name="sign-up")
                 .heading
                     span.site #{config.siteName}
-                    h1 Become a member
-                    p.subhead Join the #{config.siteName} community today to start placing.
+                    h1 加入我们
+                    p.subhead 现在加入 #{config.siteName} 社区，开始共同绘制！
                 if !config.maintenance || config.maintenance.allowSignups
                     if config.oauth.dynastic && config.oauth.dynastic.enabled
-                        h3 The best way to sign up
+                        h3 注册的最好方式
                         p.text-muted Use a Dynastic Account to sign into canvas.place
-                        a.btn.btn-lg.btn-success(href="/auth/dynastic") Sign in with Dynastic Account
+                        a.btn.btn-lg.btn-success(href="/auth/dynastic") 用Dynastic账户登录
                         hr
                     form.form-signin(action="/signup")
-                        label.sr-only(for="inputUsernameRegistration") Username
-                        input.form-control#inputUsernameRegistration(type="text", autocomplete="username", placeholder="Username", name="username", required, autofocus, autocorrect="off", autocapitalize="off", spellcheck="false")
-                        label.sr-only(for="inputPasswordRegistration") Password
-                        input.form-control.form-merge-top#inputPasswordRegistration(type="password", autocomplete="new-password", placeholder="Password", name="password", required)
-                        label.sr-only(for="inputPasswordRegistration2") Password (again)
-                        input.form-control.form-merge-bottom#inputPasswordRegistration2(type="password", autocomplete="new-password", placeholder="Password (again)", name="passwordverify", required)
+                        label.sr-only(for="inputUsernameRegistration") 用户名
+                        input.form-control#inputUsernameRegistration(type="text", autocomplete="username", placeholder="用户名", name="username", required, autofocus, autocorrect="off", autocapitalize="off", spellcheck="false")
+                        label.sr-only(for="inputPasswordRegistration") 密码
+                        input.form-control.form-merge-top#inputPasswordRegistration(type="password", autocomplete="new-password", placeholder="密码", name="password", required)
+                        label.sr-only(for="inputPasswordRegistration2") 确认密码
+                        input.form-control.form-merge-bottom#inputPasswordRegistration2(type="password", autocomplete="new-password", placeholder="确认密码", name="passwordverify", required)
                         if captcha
                             .
                                 !{renderCaptcha()}
@@ -29,45 +29,45 @@
                                 label
                                     input(type="checkbox", name="agreeToGuidelines")
                                     span
-                                        | I agree to abide by the 
+                                        | 我同意遵守 
                                         if hasTOS
-                                            a(href="/tos") Terms of Service
+                                            a(href="/tos") 服务条款
                                         if hasTOS && hasCommunityGuidelines
-                                            |  and 
+                                            |  和 
                                         if hasCommunityGuidelines
-                                            a(href="/guidelines") Community Guidelines
+                                            a(href="/guidelines") 社区准则
                                         | .
                         .checkbox
                             label
                                 input(type="checkbox", name="keepSignedIn", checked)
-                                span Keep me signed in
+                                span 保持登录
                         .send-section
-                            button.btn.btn-popping(type="submit") Sign Up
+                            button.btn.btn-popping(type="submit") 注册
                             include social-buttons
                 else
                     br
                     div.alert.alert-danger
-                        h4 Signing up for #{config.siteName} is currently disabled.
+                        h4 #{config.siteName} 的注册已经停止。
                         if config.maintenance.notice
                             p !{config.maintenance.notice}
 
             div(tab-name="sign-in")
                 .heading
                     span.site #{config.siteName}
-                    h1 Welcome back
-                    p.subhead Sign in to your account to continue placing and save your stats.
+                    h1 欢迎回来
+                    p.subhead 登录您的帐户以继续绘制和保存您的数据。
                 if config.maintenance.allowLogins || !config.maintenance
                     form.form-signin(action="/signin")
-                        label.sr-only(for="inputUsername") Username
-                        input.form-control#inputUsername(type="text", autocomplete="username", placeholder="Username", name="username", required, autofocus, autocorrect="off", autocapitalize="off", spellcheck="false")
-                        label.sr-only(for="inputPassword") Password
-                        input.form-control#inputPassword(type="password", autocomplete="current-password", placeholder="Password", name="password", required)
+                        label.sr-only(for="inputUsername") 用户名
+                        input.form-control#inputUsername(type="text", autocomplete="username", placeholder="用户名", name="username", required, autofocus, autocorrect="off", autocapitalize="off", spellcheck="false")
+                        label.sr-only(for="inputPassword") 密码
+                        input.form-control#inputPassword(type="password", autocomplete="current-password", placeholder="密码", name="password", required)
                         .checkbox
                             label
                                 input#inputKeepSignIn(type="checkbox", name="keepSignedIn", checked)
-                                span Keep me signed in
+                                span 保持登录
                         .send-section
-                            button.btn.btn-popping(type="submit") Sign in
+                            button.btn.btn-popping(type="submit") 登录
                             include social-buttons
                         if config.signInBanner
                             br
@@ -75,7 +75,7 @@
                 else
                     br
                     div.alert.alert-danger
-                        h4 Signing in to #{config.siteName} is currently disabled.
+                        h4 #{config.siteName} 现在不可登录。
                         if config.maintenance.notice
                             p !{config.maintenance.notice}
             div.hides-switchers(tab-name="2fa-auth")
@@ -95,14 +95,14 @@
             .active(tab-name="sign-up")
                 div
                     .description
-                        span.headline Need an account?
-                        span.action-label Sign up for an account
+                        span.headline 需要一个账户？
+                        span.action-label 注册以获取账户
                     .call-to-action
-                        a.btn.btn-popping.btn-arrow Sign Up
+                        a.btn.btn-popping.btn-arrow 注册
             div(tab-name="sign-in")
                 div
                     .description
-                        span.headline Already a member?
-                        span.action-label Sign in to your account
+                        span.headline 已经有账户了？
+                        span.action-label 登陆你的账户
                     .call-to-action
-                        a.btn.btn-popping.btn-arrow Sign In
+                        a.btn.btn-popping.btn-arrow 登录
