--- a/views/public/force-pw-reset.pug
+++ b/views/public/force-pw-reset.pug
@@ -17,4 +17,4 @@ block content
             button.btn.btn-lg.btn-primary.btn-block(type="submit") 重设密码
             if error
                 br
-                .alert.alert-danger #[strong Uh oh!] #{error.message}
+                .alert.alert-danger #[strong 啊这！] #{error.message}
