--- a/views/public/pick-username.pug
+++ b/views/public/pick-username.pug
@@ -1,6 +1,6 @@
 extends ../layout
 block dependencies
-    - var pageTitle = "Pick a Username";
+    - var pageTitle = "选择一个用户名";
     - var css = ["/css/signin.css"];
 block content
     - if (typeof username === "undefined") username = "";
@@ -8,9 +8,9 @@ block content
     .container
         form.form-signin(method="POST", action="/pick-username")
             input(type='hidden', name='_csrf', value=_csrf)
-            h2.form-signin-heading Pick a Username
-            label.sr-only(for="inputUsername") Username
-            input.form-control#inputUsername(type="text", placeholder="Username", name="username", value=username, required, autofocus, autocomplete="off", autocorrect="off", autocapitalize="off", spellcheck="false")
+            h2.form-signin-heading 选择一个用户名
+            label.sr-only(for="inputUsername") 用户名
+            input.form-control#inputUsername(type="text", placeholder="用户名", name="username", value=username, required, autofocus, autocomplete="off", autocorrect="off", autocapitalize="off", spellcheck="false")
             if captcha
                 .
                     !{renderCaptcha()}
