--- a/views/layout.pug
+++ b/views/layout.pug
@@ -170,7 +170,7 @@ html(lang="zh")
     // Scripts
     script(src="https://cdn.bootcdn.net/ajax/libs/jquery/1.12.4/jquery.min.js")
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js", integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa", crossorigin="anonymous")
-    script(src="https://cdn.polyfill.io/v2/polyfill.min.js")
+    script(src="/js/polyfill.min.js")
     if typeof config.publicRaven !== "undefined" && config.publicRaven
       script(src="https://cdn.bootcdn.net/ajax/libs/raven.js/raven-js@3.27.0/raven.min.js", crossorigin="anonymous")
       script.
