替换图片，增加翻译

--- a/views/admin_layout.pug
+++ b/views/admin_layout.pug
@@ -12,7 +12,7 @@ block dependencies
     - if (typeof pageTitle === "undefined") pageTitle = null;
     - if (typeof user === "undefined") user = null;
     - var userAdmin = user ? user.admin : false;
-    - var pageTitle = !!pageTitle ? pageTitle + " &middot; Admin" : "Admin";
+    - var pageTitle = !!pageTitle ? pageTitle + " &middot; 管理员" : "管理员";
     - var css = ["/css/dashboard.css", "https://cdn.bootcdn.net/ajax/libs/bootstrap-select/1.13.18/css/bootstrap-select.min.css"].concat(typeof css === "undefined" ? [] : css);
     - var js = ["https://cdn.bootcdn.net/ajax/libs/bootstrap-select/1.13.18/js/bootstrap-select.min.js"].concat(typeof js === "undefined" ? [] : js);
     - var isAdmin = true;
