--- a/views/layout.pug
+++ b/views/layout.pug
@@ -93,7 +93,7 @@ html(lang="zh")
             span.icon-bar
             span.icon-bar
           a.navbar-brand(href="https://www.minebbs.com", style="margin-right: -5px")
-            img(src="https://assets.dynastic.co/brand/img/icon-46.png", height="20")
+            img(src="/img/favicon-48x48.png", height="20")
           a.navbar-brand(href="/")
             | #{config.siteName}
             if config.debug
