--- a/views/public/account.pug
+++ b/views/public/account.pug
@@ -39,7 +39,7 @@ block content
                         if profileUserInfo.statistics.placesThisWeek !== null
                             div
                                 span.value= profileUserInfo.statistics.placesThisWeek.toLocaleString()
-                                span.name 本周像素
+                                span.name 本周涂鸦
             if isSelf && config.maintenance.notice
                 div.alert.alert-danger
                     h4 关于你 #{config.siteName} 账户的重要信息：
