--- a/views/public/index.pug
+++ b/views/public/index.pug
@@ -4,7 +4,7 @@ block dependencies
     - var pinnable = true;
     - var needsLegit = true;
     - var needsHelp = true;
-    - var pageDesc = "网络用户一起合作，创造一些惊人的东西。加入成千上万的其他用户，看看当你们共享一个巨大的画布时会发生什么。";
+    - var pageDesc = "在网络世界中，与其他用户一起合作进行一些惊人的创作！加入我们，看看当大家共享一个巨大的画布时会发生什么吧~";
 block content
     +getViewExtensions("main")
     include views/place
